create detail.html change input detail_view and detail_view inputted to url like task/

--- a/todo_list/webapp/templates/index.html
+++ b/todo_list/webapp/templates/index.html
@@ -7,7 +7,9 @@
 <body>
 {% for task in tasks %}
     <p>
-    {{ task.task }}, {{ task.status }}: {{ task.date_deadline }}
+        <a href="/task?pk={{ task.pk }}">
+            {{ task.task }}, {{ task.status }}: {{ task.date_deadline }}
+        </a>
     </p>
 
     
