create.html and create_view for GET

--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -5,6 +5,20 @@
     <title>Title</title>
 </head>
 <body>
+<form action="/create" method="post">
+    {% csrf_token %}
+    <select name="status">
+        {% for select in selection %}
+            <option value="{{ select.0 }}">{{ select.1 }}</option>
+        {% endfor %}
+    </select>
+    <br>
+    <input type="text" name="task">
+    <br>
+    <input type="date" name="date_deadline">
+    <br>
+    <input type="button" value="create">
 
+</form>
 </body>
 </html>
