create.html and create_view for POST

--- a/todo_list/webapp/templates/detail.html
+++ b/todo_list/webapp/templates/detail.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h3>Task</h3>
 <p>{{ task.task }}</p>
 <p>{{ task.status }}</p>
 <p>{{ task.date_deadline }}</p>
