--- a/todo_list/webapp/templates/index.html
+++ b/todo_list/webapp/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h3>Tasks list</h3>
 {% for task in tasks %}
     <p>
         <a href="/task?pk={{ task.pk }}">
