--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -5,20 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/create" method="post">
+<h3>Create task</h3>
+<form action="/" method="post">
     {% csrf_token %}
     <select name="status">
         {% for select in selection %}
             <option value="{{ select.0 }}">{{ select.1 }}</option>
         {% endfor %}
     </select>
-    <br>
-    <input type="text" name="task">
-    <br>
-    <input type="date" name="date_deadline">
-    <br>
-    <input type="button" value="create">
-
+    <p>
+        <input type="text" name="task">
+    </p>
+    <p>
+        <input type="date" name="date_deadline">
+    </p>
+<p>
+    <input type="submit" value="create">
+</p>
 </form>
+<p><a href="/">to_homepage</a></p>
 </body>
 </html>
