mistake fixed. "/" was wrong. that "" is work in action in form at create.html

--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>Create task</h3>
-<form action="/" method="post">
+<form action="" method="post">
     {% csrf_token %}
     <select name="status">
         {% for select in selection %}
