--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -8,21 +8,26 @@
 <h3>Create task</h3>
 <form action="" method="post">
     {% csrf_token %}
+    <p>
+       task: <input type="text" name="task">
+    </p>
+    <p>
+        status:
     <select name="status">
         {% for select in selection %}
             <option value="{{ select.0 }}">{{ select.1 }}</option>
         {% endfor %}
     </select>
-    <p>
-        <input type="text" name="task">
     </p>
+
+
     <p>
-        <input type="date" name="date_deadline">
+       finish data: <input type="date" name="date_deadline">
     </p>
 <p>
     <input type="submit" value="create">
 </p>
 </form>
-<p><a href="/">to_homepage</a></p>
+<p><a href="/">Back</a></p>
 </body>
 </html>
