include test description

--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -19,7 +19,9 @@
         {% endfor %}
     </select>
     </p>
-
+    <p>
+        description: <textarea name="text" id="" cols="20" rows="4"></textarea>
+    </p>
 
     <p>
        finish data: <input type="date" name="date_deadline">
