change "/" main address to name index in urls

--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -30,6 +30,6 @@
     <input type="submit" value="create">
 </p>
 </form>
-<p><a href="/">Back</a></p>
+<p><a href="{% url "index" %}">Back</a></p>
 </body>
 </html>
