--- a/todo_list/webapp/templates/detail.html
+++ b/todo_list/webapp/templates/detail.html
@@ -18,7 +18,7 @@
     <u>{{ task.text }}</u>
 </p>
 <br/>
-<p><a href="/">Back</a></p>
+<p><a href="{% url "index" %}">Back</a></p>
 <a href="/delete?pk={{ task.pk }}">Delete</a>
 </body>
 </html>
