change "detail?pk={{}}" address to name {%url "" task_detail%} in html and urls and views to do workable

--- a/todo_list/webapp/templates/index.html
+++ b/todo_list/webapp/templates/index.html
@@ -8,7 +8,7 @@
 <h3>Tasks list</h3>
 {% for task in tasks %}
     <p>
-        <a href="/task?pk={{ task.pk }}">
+        <a href="{% url "task_detail" task.pk %}">
             {{ task.task }}, {{ task.get_status_display }}: {{ task.date_deadline }}
         </a>
     </p>
