--- a/todo_list/webapp/templates/index.html
+++ b/todo_list/webapp/templates/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
 <h3>Tasks list</h3>
 {% for task in tasks %}
     <p>
@@ -14,6 +10,5 @@
     </p>
 
 {% endfor %}
-<a href="/create">Create task</a>
-</body>
-</html>
+<a href="{% url "task_create" %}">Create task</a>
+{% endblock %}
