--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
 <h3>Create task</h3>
 <form action="{% url "task_create" %}" method="post">
     {% csrf_token %}
@@ -31,5 +27,4 @@
 </p>
 </form>
 <p><a href="{% url "index" %}">Back</a></p>
-</body>
-</html>
+{% endblock %}
