move btns to navebar

--- a/todo_list/webapp/templates/base.html
+++ b/todo_list/webapp/templates/base.html
@@ -20,15 +20,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+          {% block nav %}
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" href="{% url "task_create" %}">Create task</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
+          {% endblock %}
       </ul>
     </div>
   </div>
