--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block nav %}
+{% endblock %}
+
 {% block content %}
 <h3>Create task</h3>
 <form action="{% url "task_create" %}" method="post">
@@ -18,7 +21,6 @@
     <p>
         description: <textarea name="text" id="" cols="20" rows="4"></textarea>
     </p>
-
     <p>
        finish data: <input type="date" name="date_deadline">
     </p>
@@ -26,5 +28,4 @@
     <input type="submit" value="create">
 </p>
 </form>
-<p><a href="{% url "index" %}">Back</a></p>
 {% endblock %}
