in models.py task.text changed to task.description

--- a/todo_list/webapp/templates/create.html
+++ b/todo_list/webapp/templates/create.html
@@ -23,7 +23,7 @@ Create new task
     </select>
     </p>
     <p>
-        description: <textarea name="text" id="" cols="20" rows="4"></textarea>
+        description: <textarea name="description" id="" cols="20" rows="4"></textarea>
     </p>
     <p>
        finish data: <input type="date" name="date_deadline">
