--- a/todo_list/webapp/templates/detail.html
+++ b/todo_list/webapp/templates/detail.html
@@ -18,6 +18,6 @@
 <u>{{ task.date_deadline }}</u></p>
 <p>
     <label for="text">task description: </label>
-    <u>{{ task.text }}</u>
+    <u>{{ task.description }}</u>
 </p>
 {% endblock %}
