create detail.html and make that workable

--- a/todo_list/webapp/templates/detail.html
+++ b/todo_list/webapp/templates/detail.html
@@ -3,9 +3,13 @@
 {% block title %}Task details{% endblock %}
 
 {% block nav %}
-<li class="nav-item">
+    <li class="nav-item">
+    <a href="{% url "task_update" task.id %}" class="nav-link">Update</a>
+</li>
+    <li class="nav-item">
     <a href="{% url "delete" task.pk %}" class="nav-link">Delete</a>
 </li>
+
 {% endblock %}
 
 {% block content %}
